# fsb-learn-python

day-1/: Practice1_7.ipynb  main.ipynb  main.py  pyproject.toml
day-1/.ipynb_checkpoints/: Practice1_7-checkpoint.ipynb
day-1/session-3/: client.py  error_log.txt  received_error_log.txt  server.py
day-2/: main.py  pyproject.toml  streamlit.py
day-3/: bai_tap_pandas_vn_exes.ipynb  exercise2.ipynb  expected_output.ipynb  main.ipynb  pyproject.toml
hw-1/: HW1_truong51972.ipynb  main.py  pyproject.toml
hw-3/: README.md  eda.ipynb  main.py  pyproject.toml
hw-3/data/: raw_test.csv  raw_train.csv  raw_val.csv
hw-3/models/: AdaBoostClassifier.pkl  DecisionTreeClassifier.pkl  GradientBoostingClassifier.pkl  RandomForestClassifier.pkl  XGBClassifier.pkl  categorical_config.pkl  numeric_scaler.pkl  preprocessor.pkl
hw-3/outputs/: classification_report.json  eda_summary.json  feature_selection.json  metrics.json  predictions.csv
hw-3/tests/: __init__.py  sample_data.csv  test_pipeline.py  test_preprocess.py
s10-practice/: main.ipynb  main.py  pyproject.toml
s10-practice/data/: world_countries_population_2020.csv
s11-ml-dl/: house_price.ipynb  house_price_executed.ipynb  iris.ipynb  main.ipynb  main.py  pyproject.toml
s3-mini-project/: README.md  main.py  pyproject.toml
