[project]
name = "hw-3"
version = "0.1.0"
description = "Heart Disease ML Training Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook>=7.5.7",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "joblib>=1.3.0",
]